MDEV-24671 fixup: Merge lock_sys_t::wait_pending into wait_count

The maximum number of concurrently waiting transactions is one less
than the maximum number of concurrent transactions.

A 45-bit cumulative counter of lock waits will support more than
one million lock waits per second for a year.